# AI_Powered_Customer_Support_Agent

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-ec2.yml
customer_support_agent/api/: app_factory.py  dependencies.py
customer_support_agent/api/routers/: drafts.py  knowledge.py  memory.py  tickets.py
customer_support_agent/core/: __init__.py  settings.py
customer_support_agent/integrations/memory/: __init__.py  mem0_store.py
customer_support_agent/integrations/rag/: chroma_kb.py
customer_support_agent/integrations/tools/: support_tools.py
customer_support_agent/repositories/sqlite/: __init__.py  base.py  customer.py  drafts.py  tickets.py
customer_support_agent/schemas/: __init__.py  api.py
customer_support_agent/services/: copilot_services.py  draft_services.py  knowledge_services.py
customer_support_agent/tests/: test_simple.py
