[project]
name = "ai-powered-customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "uvicorn>=0.30",
    "langchain>=1.3.14",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.1.2",
    "mem0ai>=2.0.12",
    "python-dotenv>=1.2.2",
    "requests>=2.31",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
